--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
     border: none;
     }
 
+body {
+    font-family: sans-serif;
+    color: black;
+}
+
 /*title*/
 
 #title {
@@ -17,8 +22,25 @@
     letter-spacing: 4px;
 }
 
+#title, #nav {
+    line-height: 70px;
+}
+
 #nav li {
     float: right;
     list-style-type: none;
     margin-right: 20px;
+}
+
+#nav a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#nav a:hover{
+    border-bottom: 1px solid black;
+}
+
+.active {
+    border-bottom: 1px solid black;
 }
