--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
 
 #nav a {
     text-decoration: none;
-    color: black;
+    color: inherit;
     border: 1px solid black;
 }
 
@@ -42,6 +42,10 @@ body {
     color: blue;
 }
 
-.current {
-    color: blue;
+/*hero image*/
+
+#hero-image {
+    height: 900px;
+    width: 100%;
+    background: url('../images/original.jpg') no-repeat center center;
 }
