Add new image for hero image that is scaled better, set overflow to hidden so it dosent cover the header elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,8 @@ body {
 /*hero image*/
 
 #hero-image {
-    height: 900px;
+    height: 800px;
     width: 100%;
     background: url('../images/original.jpg') no-repeat center center;
+    overflow: hidden;
 }
