--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,3 +50,11 @@ body {
     background: url('../images/original.jpg') no-repeat center center;
     overflow: hidden;
 }
+
+/* information about the launch*/
+
+#launch {
+    width: 100%;
+    height: 600px;
+    background-color: black;
+}
