--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,3 +58,19 @@ body {
     height: 600px;
     background-color: black;
 }
+
+#launch h2,p{
+    color: white;
+}
+
+#launch h2{
+    float: right;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+#launch p{
+    float: right;
+    margin-top: 40px;
+    margin-right: -20px;
+}
