--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,20 +57,30 @@ body {
     width: 100%;
     height: 600px;
     background-color: black;
+    position: relative;
 }
 
 #launch h2,p{
     color: white;
+    position: absolute;
 }
 
 #launch h2{
-    float: right;
-    margin-top: 20px;
-    margin-right: 20px;
+    bottom: 10px;
+    top: 25px;
+    left: 400x;
+    right: 180px;
 }
 
 #launch p{
-    float: right;
-    margin-top: 40px;
-    margin-right: -20px;
+    top: 5px;
+    bottom: 5px;
+    left: 5px;
+    right: 5px;
+}
+
+#test {
+    height: 600px;
+    width: 100%;
+    background-color: aqua;
 }
