--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,30 +57,23 @@ body {
     width: 100%;
     height: 600px;
     background-color: black;
-    position: relative;
 }
 
-#launch h2,p{
+#launch,p{
     color: white;
-    position: absolute;
 }
 
-#launch h2{
-    bottom: 10px;
-    top: 25px;
-    left: 400x;
-    right: 180px;
+#launch-img {
+    width: 45%;
+    float: left;
+    padding-top: 55px;
+    padding-left: 45px;
 }
 
-#launch p{
-    top: 5px;
-    bottom: 5px;
-    left: 5px;
-    right: 5px;
-}
-
-#test {
-    height: 600px;
-    width: 100%;
-    background-color: aqua;
+#launch-info {
+    width: 45%;
+    float: right;
+    padding-top: 55px;
+    padding-right: 45px;
+    font-size: x-large;
 }
