--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
     background-color: black;
 }
 
-#launch,p{
+#launch,p h2{
     color: white;
 }
 
@@ -71,6 +71,28 @@ body {
 }
 
 #launch-info {
+    width: 45%;
+    float: right;
+    padding-top: 55px;
+    padding-right: 45px;
+    font-size: x-large;
+}
+
+/* information about seperation and landing*/
+
+#seperation {
+    width: 100%;
+    height: 600px;
+}
+
+#seperation-img {
+    width: 45%;
+    float: left;
+    padding-top: 55px;
+    padding-left: 45px;
+}
+
+#seperation-info {
     width: 45%;
     float: right;
     padding-top: 55px;
