Added title for the landing and some information about it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,7 +78,7 @@ body {
     font-size: x-large;
 }
 
-/* information about seperation and landing*/
+/* information about seperation */
 
 #seperation {
     width: 100%;
