--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,3 +99,24 @@ body {
     padding-right: 45px;
     font-size: x-large;
 }
+
+/* landing section */
+
+#landing {
+    width: 100%;
+    height: 600px;
+    background-color: black;
+}
+
+#landing,p h2{
+    color: white;
+}
+
+#landing-info {
+    width: 45%;
+    float: right;
+    padding-top: 55px;
+    padding-right: 45px;
+    font-size: x-large;
+}
+
