--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,3 +120,10 @@ body {
     font-size: x-large;
 }
 
+#landing-img {
+    width: 45%;
+    float: left;
+    padding-top: 55px;
+    padding-left: 45px;
+}
+
