--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,3 +127,15 @@ body {
     padding-left: 45px;
 }
 
+/* landing video */
+
+#vid-section {
+    width: 100%;
+    height: 600px;
+}
+
+#vid {
+    margin-top: 45px;
+    margin-left: 25%;
+}
+
