Added aria labels to all footer links and some more styling to footer elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,3 +145,18 @@ footer {
     background-color: black;
     height: 100px;
 }
+
+footer ul {
+    text-align: center;
+}
+
+footer li {
+    display: inline;
+    font-size: x-large;
+    margin: 1%;
+    padding: 5%;
+}
+
+footer a {
+    color: white;
+}
