Added some changes to footer height and position

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,8 +142,10 @@ body {
 /*footer*/
 
 footer {
-    background-color: black;
-    height: 100px;
+    bottom: 0;
+    width: 100%;
+    height: 125px;
+    background: black;
 }
 
 footer ul {
