--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body {
 #hero-image {
     height: 800px;
     width: 100%;
-    background: url('../images/original.jpg') no-repeat center center;
+    background: no-repeat center center;
     overflow: hidden;
 }
 
