--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 
 body {
     font-family: sans-serif;
-    color: black;
 }
 
 
@@ -14,6 +13,7 @@ body {
 
 #title {
     float: left;
+    color: black;
 }
 
 /*navigation links*/
@@ -40,7 +40,8 @@ body {
 }
 
 #nav a:hover{
-    color: blue;
+    color: white;
+    background-color: black;
 }
 
 /*hero image*/
