Make icons bigger put more space between them

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,12 @@ footer li {
 
 footer a {
     color: white;
+    font-size: 210%;
+    margin: 1%;
+    padding: 6%;
 }
+
+/* header */ 
 
 header {
     position: fixed;
