--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: sans-serif;
+    color: black;
 }
 
 
@@ -33,15 +34,20 @@ body {
     margin-right: 20px;
 }
 
-#nav a {
-    text-decoration: none;
-    color: inherit;
-    border: 1px solid black;
-}
 
 #nav a:hover{
     color: white;
     background-color: black;
+}
+
+.active {
+    background-color:rgb(201, 201, 201);
+}
+
+#nav a {
+    text-decoration: none;
+    border: 1px solid black;
+    color: inherit;
 }
 
 /*hero image*/
@@ -146,7 +152,7 @@ body {
 footer {
     bottom: 0;
     width: 100%;
-    height: 125px;
+    height: 175px;
     background: black;
 }
 
