--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ body {
 footer {
     bottom: 0;
     width: 100%;
-    height: 175px;
+    height: 150px;
     background: black;
 }
 
@@ -169,7 +169,7 @@ footer li {
 
 footer a {
     color: white;
-    font-size: 210%;
+    font-size: 120%;
     margin: 1%;
     padding: 6%;
 }
@@ -183,6 +183,11 @@ header {
 }
 
 /* contact */
+
+#contact {
+    width: 100%;
+    height: 750px;
+}
 
 .contact-section {
     width: 500px;
