--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ body {
 
 #title, #nav {
     line-height: 70px;
+    padding-left: 15px;
 }
 
 #nav li {
@@ -50,4 +51,91 @@ body {
     width: 100%;
     background: no-repeat center center;
     overflow: hidden;
+}
+
+/* section1 style rules*/
+
+#section1-background {
+    background-color: black;
+    width: 100%;
+}
+
+#section1 {
+    width: 100%;
+    height: 600px;
+    background-color: black;
+}
+
+#section1,p h2{
+    color: white;
+
+}
+
+#section1-img {
+    width: 45%;
+    float: left;
+    padding-top: 55px;
+    padding-left: 45px;
+}
+
+#section1-info {
+    width: 45%;
+    float: right;
+    padding-top: 55px;
+    padding-right: 45px;
+    font-size: x-large;
+}
+
+/* section2 style rules */
+
+#section2 {
+    width: 100%;
+    height: 600px;
+}
+
+#section2-img {
+    width: 45%;
+    float: left;
+    padding-top: 55px;
+    padding-left: 45px;
+}
+
+#section2-info {
+    width: 45%;
+    float: right;
+    padding-top: 55px;
+    padding-right: 45px;
+    font-size: x-large;
+}
+
+/* section3 style rules */
+
+
+#section3-background {
+    background-color: black;
+}
+
+#section3 {
+    width: 100%;
+    height: 600px;
+    background-color: black;
+}
+
+#section3,p h2{
+    color: white;
+}
+
+#section3-info {
+    width: 45%;
+    float: right;
+    padding-top: 55px;
+    padding-right: 45px;
+    font-size: x-large;
+}
+
+#section3-img {
+    width: 45%;
+    float: left;
+    padding-top: 55px;
+    padding-left: 45px;
 }
