--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,3 +139,34 @@ body {
     padding-top: 55px;
     padding-left: 45px;
 }
+
+/*footer*/
+
+footer {
+    bottom: 0;
+    width: 100%;
+    height: 150px;
+    background: black;
+}
+
+footer ul {
+    text-align: center;
+}
+
+footer li {
+    display: inline;
+    margin: 1%;
+    padding: 5%;
+}
+
+footer a {
+    color: white;
+    font-size: 3rem;
+    margin: 1%;
+    padding: 6%;
+}
+
+footer a:hover {
+    color: grey;
+}
+
