--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,11 @@ iframe {
         font-size: 20px;
     }
 
+    .contact-section {
+        width: 65%;
+        margin-right: 10px;
+    }
+
 }
 
 @media only screen and (max-width: 370px){
