--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,13 @@ iframe {
         font-size: 25px;
     }
 
+
+
+    header, ul, li {
+        display: inline-block;
+    }
+
+
 }
 
 @media only screen and (max-width: 470px){
